--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,115 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap";
+
+:root {
+  --blue-1: #3c429e;
+  --blue-2: #4c52ad;
+  --yellow-1: #fac742;
+  --white: #fff;
+  --grey-1: #ededed;
+  --shadow-dark: rgba(0, 0, 0, 0.3);
+  --shadow-light: rgba(255, 255, 255, 0.1);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 5px;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--blue-1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.box-container {
+  width: 400px;
+  height: 80vh;
+  background-color: var(--blue-2);
+  margin-top: 20px;
+  box-shadow: 20px 20px 20px var(--shadow-dark);
+  border-radius: 30px;
+  justify-content: center;
+  padding: 0;
+}
+
+.upper-data {
+  position: relative;
+  width: 100%;
+  height: 40%;
+  margin: 0;
+  top: 0;
+  left: 0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  overflow: hidden;
+}
+img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.weather-data {
+  position: relative;
+  z-index: 1;
+  flex-direction: column;
+  display: flex;
+  background-color: var(--shadow-dark);
+  align-items: center;
+  justify-content: center;
+  margin-top: 10vh;
+}
+.lower-data {
+  position: relative;
+  overflow: hidden;
+  top: 10px;
+  width: 100%;
+  height: 50%;
+  border-radius: 20px;
+  padding: 20px;
+}
+.lower-inner-data {
+  position: relative;
+  background-color: var(--shadow-light);
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+}
+
+.row {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+}
+
+span {
+  font-size: 20px;
+}
+
+p {
+  font-size: 15px;
+}
+/* .col {
+  /* height: 50%;
+  width: 50%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+} */
